fixed spacing below 5 logos on all pages

--- a/wp-content/themes/akd/css/overwrite.css
+++ b/wp-content/themes/akd/css/overwrite.css
@@ -1060,6 +1060,7 @@ margin-top: 25px;
 	/*padding-top: 50px;*/
 	justify-content:center;
 	align-items:center;
+	padding-bottom: 30px;
 }
 .modal-padding{
 	padding-top: 35px;
